NIFI-12545 Updated nifi-iceberg-bundle using current API methods
This closes #8186

Signed-off-by: David Handermann <exceptionfactory@apache.org>